--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,28 +1,14 @@
-.App {
-  text-align: center;
+.container {
+  display: flex;
+  justify-content: flex-start;
+  margin: 40px;
+
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+h1 {
+  width: 100px;
+  font-family: 'Caveat Brush', cursive;
+  font-size: 50px;
+  margin-left: 50px;
+  color: palevioletred;
 }
